# esp32-idf5-scales

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.cpp
main/screen/: fontx.cpp  st7789.cpp
main/task/: blinkTask.cpp  buttonTask.cpp  counterTask.cpp  counterTask.h  encoderTask.cpp  hx711Task.cpp  hx711Task.h  screenTask.cpp  screenTask.h  stepperTask.cpp  stepperTask.h  tofTask.cpp  tofTask.h  uartTask.cpp  uartTask.h
main/util/: config.cpp  config.h  i2c.cpp  i2c.h  main.h
